# conversation-test-cases

./: CMakeLists.txt  README.md
src/: conversation_buffer.cpp  conversation_buffer.h  conversation_engine.cpp  conversation_engine.h  deadlock_resolution.cpp  deadlock_resolution.h  deadlock_simulation.cpp  deadlock_simulation.h  ipc_demo.cpp  main.cpp  protected_conversation_engine.cpp  protected_conversation_engine.h
tests/: test_basic_threading.cpp  test_deadlock_occurs.cpp  test_deadlock_resolution.cpp  test_ipc.cpp  test_protected_shared_memory.cpp
